--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -28,6 +28,12 @@ pt-BR:
         limit_type_percentage_label: Porcentagem
         limit_type_remainder_label: Restante
         carryover_label: Transferir saldo para o mês sequinte
+        carryover_tooltip: >-
+          Se selecionado, qualquer sobra ou gasto acima do orçamento será transferido para o mês seguinte quando o mês
+          atual terminar.
+        percentage_info_alert_income: Porcentagem da receita total
+        percentage_info_alert_absolute_profile: Porcentagem de %{limit_amount}
+        percentage_info_alert_percentage_profile: Porcentagem de %{limit_percentage}% da receita total
         submit: Salvar
         cancel: Cancelar
       show:
