--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -28,6 +28,12 @@ en:
         limit_type_percentage_label: Percentage
         limit_type_remainder_label: Remainder
         carryover_label: Apply carryover to next month
+        carryover_tooltip: >-
+          If selected, any leftover balance or over expecnditure will be carried over to the next month when the
+          current month ends.
+        percentage_info_alert_income: Percentage of the total income
+        percentage_info_alert_absolute_profile: Percentage of %{limit_amount}
+        percentage_info_alert_percentage_profile: Percentage of %{limit_percentage}% of the total income
         submit: Submit
         cancel: Cancel
       show:
