Do not save import if file cannot be parsed

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -87,6 +87,14 @@
               }
             }
           },
+          "import": {
+            "attributes": {
+              "base": {
+                "nothing_to_import": "Import cannot be processed as nothing was found to be improted. Please check the file and try again.",
+                "unsupported_csv_file": "This CSV file format is unsupported. Please check the file and try again."
+              }
+            }
+          },
           "profile": {
             "attributes": {
               "currency": {
