--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -120,6 +120,14 @@
               }
             }
           },
+          "import": {
+            "attributes": {
+              "base": {
+                "nothing_to_import": "Importação não pode ser processada pois não há nada para importar. Por favor verifique o arquivo e tente novamente.",
+                "unsupported_csv_file": "O formato deste arquivo CSV não é suportado. Por favor verifique o arquivo e tente novamente."
+              }
+            }
+          },
           "profile": {
             "attributes": {
               "currency": {
