--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -899,6 +899,7 @@
           "new": "Definir Orçamento",
           "no_budget_set": "--- Sem orçamento ---",
           "profile_subheader": "Orçamento do perfil",
+          "show": "Detalhes",
           "title": "Configuração de orçamentos"
         },
         "show": {
