--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -163,6 +163,7 @@ en:
         sub_header_recent_transactions: Recent Transactions
         sub_header_category_summary: Categories
         sub_header_transactions_summary: Position
+        sub_header_daily_totals_chart: Daily Totals
         money_in: Money In
         spends: Spends
         budget_limit: Budget
