--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -1050,6 +1050,7 @@
           "spends": "Gastos",
           "start_balance": "S. Inicial",
           "sub_header_category_summary": "Categorias",
+          "sub_header_daily_totals_chart": "Totais Diários",
           "sub_header_recent_transactions": "Transações Recentes",
           "sub_header_transactions_summary": "Posição",
           "title": "Bem vindo, %{name}"
