--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -328,6 +328,7 @@ en:
         disable_confirmation: Are you sure? You can re-enable this in the future.
         edit: Edit
         generic_error: An unexpected error has occurred. Please reload the page and try again.
+        loading_message: 'Loading, please wait&hellip;'
         no_records: "There's nothing to show"
         pagination: Pagination
         per_page: 'Show:'
