--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -429,6 +429,7 @@
         "dimension_width_not_included_in": "width is not included between %{min} and %{max} pixel",
         "dimension_width_not_less_than_or_equal_to": "width must be less than or equal to %{length} pixel",
         "duration_not_between": "duration must be between %{min} and %{max} (current duration is %{duration})",
+        "duration_not_equal_to": "duration must be equal to %{exact} (current duration is %{duration})",
         "duration_not_greater_than": "duration must be greater than %{min} (current duration is %{duration})",
         "duration_not_greater_than_or_equal_to": "duration must be greater than or equal to %{min} (current duration is %{duration})",
         "duration_not_less_than": "duration must be less than %{max} (current duration is %{duration})",
@@ -440,6 +441,7 @@
         "expired": "has expired, please request a new one",
         "file_not_processable": "is not identified as a valid media file",
         "file_size_not_between": "file size must be between %{min} and %{max} (current size is %{file_size})",
+        "file_size_not_equal_to": "file size must be equal to %{exact} (current size is %{file_size})",
         "file_size_not_greater_than": "file size must be greater than %{min} (current size is %{file_size})",
         "file_size_not_greater_than_or_equal_to": "file size must be greater than or equal to %{min} (current size is %{file_size})",
         "file_size_not_less_than": "file size must be less than %{max} (current size is %{file_size})",
@@ -479,6 +481,12 @@
         },
         "odd": "must be odd",
         "other_than": "must be other than %{count}",
+        "pages_not_between": "page count must be between %{min} and %{max} (current page count is %{pages})",
+        "pages_not_equal_to": "page count must be equal to %{exact} (current page count is %{pages})",
+        "pages_not_greater_than": "page count must be greater than %{min} (current page count is %{pages})",
+        "pages_not_greater_than_or_equal_to": "page count must be greater than or equal to %{min} (current page count is %{pages})",
+        "pages_not_less_than": "page count must be less than %{max} (current page count is %{pages})",
+        "pages_not_less_than_or_equal_to": "page count must be less than or equal to %{max} (current page count is %{pages})",
         "password_too_long": "is too long",
         "present": "must be blank",
         "required": "must exist",
@@ -492,6 +500,7 @@
           "other": "is too short (minimum is %{count} characters)"
         },
         "total_file_size_not_between": "total file size must be between %{min} and %{max} (current size is %{total_file_size})",
+        "total_file_size_not_equal_to": "total file size must be equal to %{exact} (current size is %{total_file_size})",
         "total_file_size_not_greater_than": "total file size must be greater than %{min} (current size is %{total_file_size})",
         "total_file_size_not_greater_than_or_equal_to": "total file size must be greater than or equal to %{min} (current size is %{total_file_size})",
         "total_file_size_not_less_than": "total file size must be less than %{max} (current size is %{total_file_size})",
