--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -481,6 +481,7 @@
         "dimension_width_not_included_in": "deve ter largura entre %{min} e %{max} pixels",
         "dimension_width_not_less_than_or_equal_to": "deve ter largura menor ou igual a %{length} pixels",
         "duration_not_between": "a duração deve estar entre %{min} e %{max} (a duração atual é %{duration})",
+        "duration_not_equal_to": "a duração deve ser igual a %{exact} (a duração atual é %{duration})",
         "duration_not_greater_than": "a duração tem de ser superior a %{min} (a duração atual é %{duration})",
         "duration_not_greater_than_or_equal_to": "a duração deve ser maior ou igual a %{min} (a duração atual é %{duration})",
         "duration_not_less_than": "a duração deve ser inferior a %{max} (a duração atual é %{duration})",
@@ -492,6 +493,7 @@
         "expired": "expirou, por favor solicite um novo",
         "file_not_processable": "não é identificado como um arquivo de mídia válido",
         "file_size_not_between": "o tamanho do arquivo deve estar entre %{min} e %{max} (o tamanho atual é %{file_size})",
+        "file_size_not_equal_to": "o tamanho do arquivo deve ser igual a %{exact} (o tamanho atual é %{file_size})",
         "file_size_not_greater_than": "o tamanho do arquivo deve ser maior que %{min} (o tamanho atual é %{file_size})",
         "file_size_not_greater_than_or_equal_to": "o tamanho do arquivo deve ser maior ou igual a %{min} (o tamanho atual é %{file_size})",
         "file_size_not_less_than": "o tamanho do arquivo deve ser menor que %{max} (o tamanho atual é %{file_size})",
@@ -531,6 +533,12 @@
         },
         "odd": "deve ser ímpar",
         "other_than": "deve ser diferente de %{count}",
+        "pages_not_between": "a contagem de páginas deve estar entre %{min} e %{max} (a contagem atual de páginas é %{pages})",
+        "pages_not_equal_to": "a contagem de páginas deve ser igual a %{exact} (a contagem atual de páginas é %{pages})",
+        "pages_not_greater_than": "a contagem de páginas deve ser maior que %{min} (a contagem atual de páginas é %{pages})",
+        "pages_not_greater_than_or_equal_to": "a contagem de páginas deve ser maior ou igual a %{min} (a contagem atual de páginas é %{pages})",
+        "pages_not_less_than": "a contagem de páginas deve ser menor que %{max} (a contagem atual de páginas é %{pages})",
+        "pages_not_less_than_or_equal_to": "a contagem de páginas deve ser menor ou igual a %{max} (a contagem atual de páginas é %{pages})",
         "password_too_long": "is too long",
         "present": "deve ficar em branco",
         "required": "é obrigatório(a)",
@@ -544,6 +552,7 @@
           "other": "é muito curto (mínimo: %{count} caracteres)"
         },
         "total_file_size_not_between": "o tamanho total do arquivo deve estar entre %{min} e %{max} (o tamanho atual é %{total_file_size})",
+        "total_file_size_not_equal_to": "o tamanho total do arquivo deve ser igual a %{exact} (o tamanho atual é %{total_file_size})",
         "total_file_size_not_greater_than": "o tamanho total do arquivo deve ser maior que %{min} (o tamanho atual é %{total_file_size})",
         "total_file_size_not_greater_than_or_equal_to": "o tamanho total do arquivo deve ser maior ou igual a %{min} (o tamanho atual é %{total_file_size})",
         "total_file_size_not_less_than": "o tamanho total do arquivo deve ser menor que %{max} (o tamanho atual é %{total_file_size})",
